# PriseConnectee_ProjetBTS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
libProj/: CMakeLists.txt  constants.c  http_server.c  mqtt.c  wifi_ap_sta.c
libProj/include/: constants.h  http_server.h  mqtt.h  wifi_ap_sta.h
main/: CMakeLists.txt  projetE6.c
